# project-allocator

./: .env  .gitignore  Dockerfile  Dockerfile.production  README.md  TODO.md  alembic.ini  config.yaml  connect_db.sh  docker-compose-prod-test.yaml  docker-compose.production.yaml  docker-compose.yaml  docker-entrypoint.sh  index.html  nginx.conf  package.json  pyproject.toml  setup.sh  setup_dev.sh  setup_repo.sh  tailwind.config.js  test.sh  vite.config.ts  webpack.config.js
.github/scripts/: clean_pods.sh  count_pods.sh  wait_deploy.sh  wait_destroy.sh
.github/workflows/: backend.yaml  (+6 more)
alembic/: env.py
backend/: .env  .gitignore  Dockerfile  README.md  dev.Dockerfile  main.py  pyproject.toml
backend/.github/workflows/: test.yaml
backend/migrations/: env.py
backend/migrations/versions/: 0d86aabed612_create_project_detail_table.py  39ab8c5ca99f_create_config_table.py  48b9b8fe4c7e_create_project_table.py  7a959237829d_create_project_detail_template_table.py  7c2e83b72e84_create_user_table.py  86e089995401_create_proposal_table.py  89adfce2b3a3_create_notification_table.py  8e5c30c5e254_create_allocation_table.py  e4dc07c2d723_create_shortlist_table.py
backend/src/: .__init__.py.swp  __init__.py  algorithms.py  auth.py  cli.py  db.py  dependencies.py  env.py  logger.py  main.py
backend/src/factories/: __init__.py  notification.py  project.py
backend/src/mixins/: timestamp.py
backend/src/models/: __init__.py  allocation.py  config.py  notification.py  project.py  proposal.py  shortlist.py  user.py
backend/src/routers/: admins.py  allocations.py  configs.py  notifications.py  projects.py  proposals.py  shortlists.py  users.py
backend/src/utils/: configs.py  projects.py
backend/tests/: conftest.py  test_admins.py  test_allocations.py  test_configs.py  test_notifications.py  test_projects.py  test_proposals.py  test_shortlists.py  test_users.py
frontend/: .env  Dockerfile  README.md  dev.Dockerfile  docker-entrypoint.sh  nginx.conf  package.json  tailwind.config.cjs  tsconfig.json
manifests/: app.yaml  backend.yaml  db.yaml  env.yaml  frontend.yaml  ingress-patch.json  secret-patch.json
migrations/: env.py
scripts/: access_db.sh  access_pod.sh  connect_db.sh  create_ws.sh  fork_repos.sh  setup_dev.sh  setup_prod.sh  setup_repo.sh
src/: App.tsx  algorithms.py  auth.py  auth.ts  cli.py  config.py  config.ts  db.py  dependencies.py  factories.py  logger.py  main.py  main.tsx  models.py  types.ts  utils.py  utils.ts
tests/: conftest.py  test_admin.py  test_admins.py  test_allocations.py  test_configs.py  test_notifications.py  test_projects.py  test_proposals.py  test_shortlists.py  test_users.py
wayfinder/: backend-policy.yaml  backend.yaml  count_pods.sh  db-template.yaml  db.yaml  frontend.yaml  wait_deploy.sh  wait_destroy.sh
(+242 files in other folders)
