[tool.poetry]
name = "projecta-allocator3"
version = "0.1.0"
description = ""
authors = ["Taichi Maeda <taichi.maeda.up@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
db = "src.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.99.1"}
uvicorn = "^0.22.0"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.8"
polyfactory = "^2.6.2"
typer = {extras = ["all"], version = "^0.9.0"}
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
